src/test/deca/context/invalid/provided/testi33.deca
//Resultats :
//Erreur contextuelle
//Ligne 9 : can't acces this field from main
class A{
    protected int x;
}
{
    A a = new A();
    print(a.x);
}